<resources>
    <string name="app_name">Inventory Manangement System</string>
    <string name="SelectYourZone">Select Your Zone</string>
    <string name="Patna">Patna</string>
    <string name="Bhagalpur">Bhagalpur</string>
    <string name="Muzzaffarpur">Muzzaffarpur</string>
    <string name="SelectYourCircle">Select Your Circle</string>
    <string name="PatnaEast">Patna(East)</string>
    <string name="PatnaWest">Patna(West)</string>
    <string name="DehriOnSone">Dehri On Sone</string>
    <string name="Bhojpur">Bhojpur</string>
    <string name="Gaya">Gaya</string>
    <string name="Biharshariff">Biharshariff</string>
    <string name="Begusarai">Begusarai</string>
    <string name="Purnia">Purnia</string>
    <string name="Vaishali">Vaishali</string>
    <string name="Darbhanga">Darbhanga</string>
    <string name="Motihari">Motihari</string>
    <string name="Chapra">Chapra</string>
    <string name="Madhepura">Madhepura</string>
    <string name="PatnaCivil">Patna Civil</string>
    <string name="DehriOnSoneCivil">Dehri On Sone</string>
    <string name="GayaCivil">Gaya Civil</string>
    <string name="BhagalpurCivil">Bhagalpur Civil</string>
    <string name="PurniaCivil">Purnia Civil</string>
    <string name="MuzzaffarpurCivil">Muzzaffarpur Civil</string>
    <string name="DarbhangaCivil">Darbhanga Civil</string>
    <string name="ChapraCivil">Chapra Civil</string>
    <string name="MadhepuraCivil">Madhepura Civil</string>
    <string name="SelectYourDivision">Select Your Division</string>
    <string name="Barh">Barh</string>
    <string name="PatnaCentral">Patna(Central)</string>
    <string name="Aurangabad">Aurangabad</string>
    <string name="Arrah">Arrah</string>
    <string name="Mohania">Mohania</string>
    <string name="Jehanabad">Jehanabad</string>
    <string name="Nawada">Nawada</string>
    <string name="Munger">Munger</string>
    <string name="Kishanganj">Kishanganj</string>
    <string name="Sitamarhi">Sitamarhi</string>
    <string name="Hajipur">Hajipur</string>
    <string name="Samastipur">Samastipur</string>
    <string name="Madhubani">Madhubani</string>
    <string name="Bettiah">Bettiah</string>
    <string name="Gopalganj">Gopalganj</string>
    <string name="Birpur">Birpur</string>
    <string name="KhagaulCivil">Khagaul Civil</string>
    <string name="BiharshariffCivil">Biharshariff Civil</string>
    <string name="ArrahCivil">Arrah Civil</string>
    <string name="JehanabadCivil">Jehanabad Civil</string>
    <string name="BegusaraiCivil">Begusarai Civil</string>
    <string name="MungerCivil">Munger Civil</string>
    <string name="BirpurCivil">Birpur Civil</string>
    <string name="GopalganjCivil">Gopalganj Civil</string>
    <string name="MotihariCivil">Motihari Civil</string>
    <string name="SamastipurCivil">Samastipur Civil</string>
    <string name="HajipurCivil">Hajipur Civil</string>
    <string name="SitamarhiCivil">Sitamarhi Civil</string>
    <string name="KishanganjCivil">Kishanganj Civil</string>
    <string name="Katra">Katra</string>
    <string name="Gaurichak">Gaurichak</string>
    <string name="Masurhi">Masurhi</string>
    <string name="Gaighat">Gaighat</string>
    <string name="Mithapur">Mithapur</string>
    <string name="BarhOld">Barh(Old)</string>
    <string name="Hathidah">Hathidah</string>
    <string name="Fatuha">Fatuha</string>
    <string name="Bakhtiarpur">Bakhtiarpur</string>
    <string name="BihtaOld">Bihta(Old)</string>
    <string name="BihtaNew">Bihta(New)</string>
    <string name="Khagaul">Khagaul</string>
    <string name="Palinganj">Palinganj</string>
    <string name="Jakkanpur">Jakkanpur</string>
    <string name="Karbigahiya">Karbigahiya</string>
    <string name="BoardcolonyUC">Board Colony(U/C)</string>
    <string name="DighaOld">Digha(Old)</string>
    <string name="DighaNew">Digha(New)</string>
    <string name="Banjari">Banjari</string>
    <string name="Bikramganj">Bikramganj</string>
    <string name="Sasaram">Sasaram</string>
    <string name="KerpaUC">Kerpa(U/C)</string>
    <string name="Kochas">Kochas</string>
    <string name="Goh">Goh</string>
    <string name="Sonenagar">Sonenagar</string>
    <string name="Rafiganj">Rafiganj</string>
    <string name="Buxar">Buxar</string>
    <string name="Jagdishpur">Jagdishpur</string>
    <string name="Piro">Piro</string>
    <string name="Dumrao">Dumrao</string>
    <string name="KaramnasaUC">Karamnasa(U/C)</string>
    <string name="Supaul">132 Supaul</string>
    <string name="Kataiya">Kataiya</string>
    <string name="Nirmali">Nirmali</string>
    <string name="Triveniganj">Triveniganj</string>
    <string name="RaghopurNew">Raghopur(New)</string>
    <string name="SimriBakhtiarpur">Simri Bakhtiarpur</string>
    <string name="UdaKishunganj">Uda Kishunganj</string>
    <string name="Saharsa">Saharsa</string>
    <string name="Sonebarsa">Sonebarsa</string>
    <string name="Hatuha">Hatuha</string>
    <string name="Siwan">Siwan</string>
    <string name="SiwanNew">Siwan(New)</string>
    <string name="Maharajganj">Maharajganj</string>
    <string name="Sheetalpur">Sheetalpur</string>
    <string name="Musrakh">Musrakh</string>
    <string name="Ekma">Ekma</string>
    <string name="Warisaliganj">Warisaliganj</string>
    <string name="Rajgir">Rajgir</string>
    <string name="Sheikhpura">Sheikhpura</string>
    <string name="Sabour">Sabour</string>
    <string name="Sultanganj">Sultanganj</string>
    <string name="Kahalgaon">Kahalgaon</string>
    <string name="Nathnagar">Nathnagar</string>
    <string name="Banka">Banka</string>
    <string name="BankaNew">Banka(New)</string>
    <string name="Naugachia">Naugachia</string>
    <string name="Khagaria1">132 Khagaria</string>
    <string name="Khagaria2">220 Khagaria</string>
    <string name="Karamnasa">Karamnasa</string>
    <string name="Ramgarh">Ramgarh</string>
    <string name="Bhabua">Bhabua</string>
    <string name="Kudra">Kudra</string>
    <string name="Pusauli">Pusauli</string>
    <string name="Bodhgaya">Bodhgaya</string>
    <string name="Sherghati">Sherghati</string>
    <string name="Wazirganj">Wazirganj</string>
    <string name="Imamganj">Imamganj</string>
    <string name="Chandauti">Chandauti</string>
    <string name="Belaganj">Belaganj</string>
    <string name="Tekari">Tekari</string>
    <string name="Tehta">Tehta</string>
    <string name="Huasganj">Huasganj</string>
    <string name="Ataula">Ataula</string>
    <string name="Nalanda">Nalanda</string>
    <string name="Ekangarsarai">Ekangarsarai</string>
    <string name="Harnaut">Harnaut</string>
    <string name="Bariphari">Bariphari</string>
    <string name="Ashtwan">Ashtwan</string>
    <string name="Balia">Balia</string>
    <string name="Manjhaul">Manjhaul</string>
    <string name="Teghra">Teghra</string>
    <string name="Jamalpur">Jamalpur</string>
    <string name="Tarapur">Tarapur</string>
    <string name="Jamui">Jamui</string>
    <string name="JamuiNew">Jamui(New)</string>
    <string name="Lakhisarai">Lakhisarai</string>
    <string name="Dhamadaha">Dhamadaha</string>
    <string name="Banmankhi">Banmankhi</string>
    <string name="Barsoi">Barsoi</string>
    <string name="Manihari">Manihari</string>
    <string name="Korha">Korha</string>
    <string name="Katihar">Katihar</string>
    <string name="Baisi">Baisi</string>
    <string name="Kishanganj1">220 Kishanganj</string>
    <string name="Kishanganj2">132 Kishanganj</string>
    <string name="Thakurganj">Thakurganj</string>
    <string name="Forbesganj">Forbesganj</string>
    <string name="Araria">Araria</string>
    <string name="Palasi">Palasi</string>
    <string name="Hajipur1">220 Hajipur</string>
    <string name="Hajipur2">132 Hajipur</string>
    <string name="Samastipur220">Samastipur 220</string>
    <string name="Darbhanga1">220 Darbhanga</string>
    <string name="Darbhanga2">132 Darbhanga</string>
    <string name="SKMCH">SKMCH</string>
    <string name="Motipur">Motipur</string>
    <string name="Musahari">Musahari</string>
    <string name="RunniSaidpur">RunniSaidpur</string>
    <string name="Belsand">Belsand</string>
    <string name="Purpi">Purpi</string>
    <string name="Sheohar">Sheohar</string>
    <string name="Jandaha">Jandaha</string>
    <string name="Mahnar">Mahnar</string>
    <string name="Garoul">Garoul</string>
    <string name="Shahpurpatori">Shahpurpatori</string>
    <string name="Dalsinghsarai">Dalsinghsarai</string>
    <string name="Rosera">Rosera</string>
    <string name="Tajpur">Tajpur</string>
    <string name="Gangwara">Gangwara</string>
    <string name="Kushewarsthan">Kushewarsthan</string>
    <string name="Benipur">Benipur</string>
    <string name="Pandaul">Pandaul</string>
    <string name="Jainagar">Jainagar</string>
    <string name="Benipatti">Benipatti</string>
    <string name="Phulparas">Phulparas</string>
    <string name="Jahnjharpur">Jahnjharpur</string>
    <string name="Laukahi">Laukahi</string>
    <string name="Dhaka">Dhaka</string>
    <string name="Pakridayal">Pakridayal</string>
    <string name="Chakiya">Chakiya</string>
    <string name="RaxaulNew">Raxau(New)</string>
    <string name="Areraj">Areraj</string>
    <string name="Raxaul">Raxaul</string>
    <string name="Ramnagar">Ramnagar</string>
    <string name="Narkatiyaganj">Narkatiyaganj</string>
    <string name="Thakraha">Thakraha</string>
    <string name="HydelValmikinagar">HydelValmikinagar</string>
    <string-array name="zone">
        <item>@string/SelectYourZone</item>
        <item>@string/Patna</item>
        <item>@string/Bhagalpur</item>
        <item>@string/Muzzaffarpur</item>
    </string-array>
    <string-array name="Circle">
        <item>@string/SelectYourCircle</item>
    </string-array>
    <string-array name="patna_circle">
        <item>@string/PatnaEast</item>
        <item>@string/PatnaWest</item>
        <item>@string/DehriOnSone</item>
        <item>@string/Bhojpur</item>
        <item>@string/Gaya</item>
        <item>@string/Biharshariff</item>
    </string-array>
    <string-array name="bhagalpur_circle">
        <item>@string/Bhagalpur</item>
        <item>@string/Begusarai</item>
        <item>@string/Purnia</item>
    </string-array>
    <string-array name="muzzaffarpur_circle">
        <item>@string/Muzzaffarpur</item>
        <item>@string/Vaishali</item>
        <item>@string/Darbhanga</item>
        <item>@string/Motihari</item>
        <item>@string/Chapra</item>
        <item>@string/Madhepura</item>
        <item>@string/PatnaCivil</item>
        <item> @string/DehriOnSoneCivil</item>
        <item> @string/GayaCivil</item>
        <item> @string/BhagalpurCivil</item>
        <item>@string/PurniaCivil </item>
        <item>@string/MuzzaffarpurCivil</item>
        <item>@string/DarbhangaCivil </item>
        <item> @string/ChapraCivil</item>
        <item>@string/MadhepuraCivil</item>
    </string-array>
    <string-array name="Division">
        <item>@string/SelectYourDivision</item>
    </string-array>
    <string-array name="patna_east_division">
        <item>@string/PatnaEast</item>
        <item>@string/Barh</item>
    </string-array>
    <string-array name="patna_west_division">
        <item>@string/PatnaWest</item>
        <item>@string/PatnaCentral</item>
    </string-array>
    <string-array name="dehri_on_sone_division">
        <item>@string/DehriOnSone</item>
        <item>@string/Aurangabad</item>
    </string-array>
    <string-array name="bhojpur_division">
        <item>@string/Arrah</item>
        <item>@string/Mohania</item>
    </string-array>
    <string-array name="gaya_division">
        <item>@string/Gaya</item>
        <item>@string/Jehanabad</item>
    </string-array>
    <string name="Transformers">Transformers</string>
    <string name="type1">Type 1</string>
    <string name="capacity">Capacity</string>
    <string name="type">Type</string>
    <string name="serial_number">Serial Number</string>
</resources>