<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Transformers"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Type: "
            android:textSize="19sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="5dp"
            android:hint="type"
            android:padding="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Make:"
            android:textSize="19sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spinnerMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Manufacturing Year:"
            android:textSize="19sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please select date"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_marginStart="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/serial_number"
            android:textSize="19sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/type"
            android:padding="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/capacity"
            android:textSize="19sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/etCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/type1"
            android:padding="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Energization date"
            android:textSize="19sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txtEnergazationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please select date"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Warranty date"
            android:textSize="19sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/txtWarranty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please select date"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="14sp"
            android:layout_margin="20dp"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:textSize="14sp"
            android:layout_margin="20dp"/>

    </LinearLayout>
</LinearLayout>
